# facegrep

./: .dockerignore  .venv  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  pyproject.toml
attic/: requirements.txt
src/facegrep/: buildozer.spec  cli.py  main.py
