[tool.poetry]
name = "facegrep"
version = "0.0.1"
description = "Greps Yo face"
authors = ["sthysel sthysel@gmail"]

[[tool.poetry.source]]
name = "kivy"
url = "https://kivy.org/downloads/simple/"

[tool.poetry.dependencies]
python = "^3.8"
android-tool = "^1.1.2"
kivy = { url="https://kivy.org/downloads/ci/linux/kivy/Kivy-2.0.0rc3-cp38-cp38-manylinux2010_x86_64.whl" }
kivymd = "*"
pyjnius = "^1.3.0"
plyer = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
coverage = {extras = ["toml"], version = "^5.0.3"}
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}
isort = "^4.3.21"

[tool.coverage.run]
branch = true
source = "facegrep"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[isort]
line_length=200
